# Fitbeat

./: .gitignore  CMakeLists.txt  README.md  prj.conf  west.yml
docs/: BUILD.md  HARDWARE.md  PROTOCOL.md  STRUCTURE.md
drivers/accel_highg/: accel_highg.c  accel_highg.h
drivers/adc_gpio/: adc_gpio.c  adc_gpio.h
drivers/bmi270/: bmi270.c  bmi270.h
drivers/cap_sensor/: cap_sensor.c  cap_sensor.h
dts/: fitbeat.overlay
include/: ble_handler.h  sensor_manager.h
src/: ble_handler.c  main.c  sensor_manager.c
